--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
     "immutability-helper": "^2.8.1",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "react-scripts": "2.1.0"
+    "react-scripts": "2.1.0",
+    "react-transition-group": "^2.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
